k8s/deployment-template.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-assignment-api
  namespace: assignment-ns-v3
spec:
  replicas: 2
  selector:
    matchLabels:
      app: java-assignment
  template:
    metadata:
      labels:
        app: java-assignment
    spec:
      containers:
        - name: java-assignment-container
          image: rabhi03/assignment-java:v3
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: "256Mi"
              cpu: "500m"
            requests:
              memory: "128Mi"
              cpu: "250m"
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
