k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: java-assignment-service
  namespace: assignment-ns-v3
spec:
  selector:
    app: java-assignment
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
