k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: java-assignment-ingress
  namespace: assignment-ns-v3
  annotations: 
    nginx.ingress.kubernetes.io/rewrite-target: /$1 
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          - path: /v3/
            pathType: Prefix
            backend:
              service:
                name: java-assignment-service
                port:
                  number: 80
#
